demo/models/tinyllama/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 30s
  labels:
    inferenceservice-name: tinyllama-1b
  name: tinyllama-1b-predictor
  namespace: summit-connect-2025
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: tinyllama-1b-predictor
    weight: 100
  wildcardPolicy: None
